2019-04-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* History search
	* Fix button order in some dialogs

2019-04-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improved handling of long history bookmarks
	* Only add message to history when expression consists of error(), warning(), or message() function
	* Interpret text after hashtag (#), in expression, as comments (add as separate history item if expression begins with double hashtags)
	* Fix move to top for last history item

2019-04-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Configurable number of lines in expression entry
	* Add "Units & Currencies" tab to preferences dialog

2019-04-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add angle unit selection to sin, cos, and tan button menus
	* Add right status popup menu with angle unit selection, etc.
	* Make it possible to set keyboard shortcut for angle units
	* Improved keyboard shortcuts dialog

2019-04-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Reduce distance between base and exponent in result
	* Ellipsize long variable values used as title in completion popup (fixes segfault)

2019-04-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Draw parentheses instead of using scaled symbols from font

2019-04-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* New icon

2019-04-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Minimal window mode (hide everything except the expression entry and, when not empty, the result display)

2019-04-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Persistent keypad option (makes it possible to show keypad and history simultaneously)

2019-03-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix custom expression font with themes other than Adwaita, Yaru, and Ooxmox

2019-03-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Make spacing between UI elements more consistent

2019-03-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Report bug menu item
