@@ -1,3 +1,7 @@
+2019-05-01 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Dark theme setting on Windows
+
 2019-04-28 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* History search
